# openstack-mcp-server

./: .gitignore  README.md  README_EN.md  main.py  pyproject.toml
src/mcp_openstack_http/: __init__.py  __main__.py  os_compute_service.py  os_image.py  os_network.py  os_network_agent.py  os_server.py  os_service.py  os_volume.py  os_volume_service.py  server.py
